final encrypt